Add -lffi to target_link_libraries

--- a/elevation_mapping_cupy/CMakeLists.txt
+++ b/elevation_mapping_cupy/CMakeLists.txt
@@ -58,7 +58,7 @@ add_library(elevation_mapping_ros
     src/elevation_mapping_wrapper.cpp
     src/elevation_mapping_ros.cpp)
 
-target_link_libraries(elevation_mapping_ros ${PYTHON_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(elevation_mapping_ros ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} -lffi)
 
 add_executable(elevation_mapping_node src/elevation_mapping_node.cpp)
 target_link_libraries(elevation_mapping_node elevation_mapping_ros)
